# healing-agent

./: .cursorignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml  secret-scan.yml
examples/tests/: api_test.py  buggy_code_example.py  test_code_fixer.py
healing_agent/: __init__.py  ai_broker.py  ai_code_fixer.py  ai_fix_saver.py  ai_hint_generator.py  code_backup.py  code_fixer.py  code_replacer.py  config_loader.py  config_template.py  configurator.py  create_backup.py  exception_handler.py  exception_saver.py  healing_agent.py  healing_agent_config.py  json_fixer.py  load_config.py  redactor.py
healing_agent/agent_tools/: tool_check_env_variables.py  tool_install_missing_module.py  tool_json_fixer.py  tool_list_files_functions.py
scripts/: github_package_upload.py  overall_test.py  pypi_release.py  test_file_generator.py  test_runner.py
tests/: buggy_code_example.py  healing_agent_config.py  test.py  test_code_fixer.py  test_json_decode_error.py  test_redactor.py
tests/healing_agent_backups/: buggy_code_example.20241031_021109.py  buggy_code_example.20241031_021111.py  buggy_code_example.20241031_021114.py
