[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "healing_agent"
version = "0.1"
authors = [
    {name = "Máté Benyovszky", email = "benyovszky.mate.work@outlook.com"},
]
description = "An AI-powered agent that helps fix and heal buggy code"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai>=1.12.0",
    "astor",
    "requests>=2.28.2"
]

[project.urls]
Homepage = "https://aiszakerto.hu"

[tool.setuptools]
packages = ["healing_agent"]
include-package-data = true

[tool.setuptools.package-data]
healing_agent = ["examples/**/*"]

[tool.setuptools.data-files]
healing_agent = ["examples/healing_agent_config.py"]
"" = ["LICENSE"]
