[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "healing_agent"
version = "0.2.0"
authors = [
    { name = "Máté Benyovszky", email = "benyovszky.mate.work@outlook.com"},
]
description = "An AI-powered agent that helps fix and heal buggy code"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai>=1.12.0",
    "astor",
    "requests>=2.28.2"
]

[project.urls]
"Homepage" = "https://github.com/matebenyovszky/healing-agent"
"Bug Tracker" = "https://github.com/matebenyovszky/healing-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["healing_agent"]